Улучшено отображение артикулов (без переноса строки)
Signed-off-by: Zakhar Petrov <46595458+zakhar-petrov@users.noreply.github.com>

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -3,6 +3,7 @@
     padding-left: 20px; /* Место для иконки */
     color: #0066cc;
     cursor: pointer;
+    white-space: nowrap;
 }
 
 .copyable::before {
