--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -104,3 +104,16 @@ div.bc-menu {
     width: 120px;
     margin: 0 auto;
 }
+
+@font-face {
+    font-family: "7LED";
+    src: url('/fonts/7LED.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+
+.seven-led {
+    font-family: '7LED', sans-serif;
+}
